--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background: url('bk.webp') no-repeat center fixed;
+    background: url('bk.webp') no-repeat center;
     background-size: cover;
     font-family: "Ubuntu", serif;
     font-style: normal;
@@ -69,7 +69,7 @@ hr {
     background: rgba(255, 255, 255, 0.611);
     color: #333;
     text-decoration: none;
-    border-radius: 9.9px;
+    border-radius: 9.3px;
     transition: 0.3s;
     width: 90%;
     max-width: 500px;
@@ -92,7 +92,7 @@ footer {
 
 @media (max-width: 560px) {
     .container {
-        width: 88%;
+        width: 92%;
         margin: 20px auto;
         padding: 15px;
     }
