--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body {
 h1 {
   align-items: center;
   color: #333;
-  font-size: 2.5rem;
+  font-size: 2.8rem;
   margin-bottom: 10px;
 }
 h2 {
@@ -30,7 +30,12 @@ h2 {
 hr {
   border: 0;
   height: 1px;
-  background: rgb(255, 255, 255);
+  background: linear-gradient(to right, 
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 20%,
+    rgba(255, 255, 255, 1) 80%,
+    rgba(255, 255, 255, 0) 100%
+  );
   margin: 30px auto;
   width: 80%;
 }
