--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 
 .container {
   max-width: 900px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.24);
   padding: 20px;
   margin: 50px auto;
   border-radius: 10px;
@@ -17,12 +17,12 @@ body {
 
 h1 {
   align-items: center;
-  color: #333;
+  color: black;
   font-size: 2.8rem;
   margin-bottom: 10px;
 }
 h2 {
-  color: #333;
+  color: black;
   font-size: 1.5rem;
   margin-bottom: 15px;
 }
@@ -64,8 +64,8 @@ hr {
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background: rgba(255, 255, 255, 0.611);
-  color: #333;
+  background: rgba(255, 255, 255, 0.493);
+  color: black;
   text-decoration: none;
   border-radius: 9.3px;
   transition: 0.3s;
@@ -77,7 +77,7 @@ hr {
 }
 
 .links a:hover {
-  background: rgba(255, 255, 255, 0.87);
+  background: rgba(255, 255, 255, 0.705);
   transform: scale(1.05);
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
@@ -86,8 +86,8 @@ hr {
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background: rgba(255, 255, 255, 0.611);
-  color: #333;
+  background: rgba(255, 255, 255, 0.493);
+  color: black;
   text-decoration: none;
   border-radius: 9.3px;
   transition: 0.3s;
@@ -99,19 +99,19 @@ hr {
 }
 
 .links b:hover {
-  background: rgba(255, 255, 255, 0.87);
+  background: rgba(255, 255, 255, 0.705);
   transform: scale(1.05);
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 
-footer p {
+footer p{
   margin-top: 30px;
   font-size: 0.9rem;
-  color: #333;
+  color: white;
 }
 
 footer a {
-  color: #333;
+  color: black;
   text-decoration: none;
 }
 
