--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,8 @@ import Layout from "../layouts/Layout.astro";
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" size="32x32" href="/favicon.webp" type="image/webp" />
+  <link rel="icon" type="image/webp" sizes="32x32" href="/favicon.webp" />
+  <link rel="icon" type="image/webp" sizes="16x16" href="/favicon.webp" />
   <title>Frank</title>
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
   <link rel="preconnect" href="https://open.spotify.com">
