--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,8 @@
-
 body {
   background: url("../assets/bk.webp") center no-repeat fixed;
   background-size: cover;
-  font-family: "Ubuntu", serif;
-  font-style: normal;
+  font-family: "Ubuntu", sans-serif; 
+  font-display: swap; 
 }
 
 .container {
@@ -14,29 +13,32 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  will-change: transform; 
 }
 
 h1 {
-  align-items: center;
   color: black;
   font-size: 2.8rem;
   margin-bottom: 10px;
+  font-display: swap;
 }
 
 h2 {
   color: black;
   font-size: 1.5rem;
   margin-bottom: 15px;
+  font-display: swap;
 }
 
 hr {
-  border: 0;
+  border: none;
   height: 1px;
-  background: linear-gradient(to right, 
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 20%,
-    rgba(255, 255, 255, 1) 80%,
-    rgba(255, 255, 255, 0) 100%
+  background: linear-gradient(
+      to right,
+      transparent 0%,
+      rgba(255, 255, 255, 1) 20%,
+      rgba(255, 255, 255, 1) 80%,
+      transparent 100%
   );
   margin: 30px auto;
   width: 80%;
@@ -51,7 +53,7 @@ hr {
   width: 100%;
 }
 
-.links a{
+.links a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,13 +62,14 @@ hr {
   color: black;
   text-decoration: none;
   border-radius: 9.3px;
-  transition: 0.3s;
+  transition: all 0.3s ease;
   width: 100%;
   max-width: 500px;
   font-size: 1.2em;
   font-weight: bold;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   vertical-align: middle;
+  will-change: transform, box-shadow;
 }
 
 .links a:hover {
@@ -75,32 +78,31 @@ hr {
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 
-.links a i, .links b i {
+.links a i,
+.links b i {
   font-size: 1.5em;
   margin-right: 33px;
   line-height: 0;
   vertical-align: middle;
 }
 
-
-
 @media (max-width: 560px) {
   .container {
-    width: 83%;
-    margin: 20px auto;
-    padding: 15px;
+      width: 83%;
+      margin: 20px auto;
+      padding: 15px;
   }
 
   h1 {
-    font-size: 1.8rem;
+      font-size: 1.8rem;
   }
 
   h2 {
-    font-size: 1.3rem;
+      font-size: 1.3rem;
   }
 
-  .links a{
-    width: 100%;
-    font-size: 1.1em;
+  .links a {
+      width: 100%;
+      font-size: 1.1em;
   }
 }
