update npm pkg & add mastodon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,7 @@ import Layout from "../layouts/Layout.astro";
       <h2>Social <i class="fa-solid fa-link"></i> :</h2>
       <a href="https://instagram.com/frk.tw" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
       <a href="https://www.threads.net/@frk.tw" target="_blank"><i class="fa-brands fa-threads"></i>Threads</a>
+      <a href="https://www.threads.net/@frk.tw" target="_blank"><i class="fa-brands fa-mastodon"></i></i>Mastodon</a>
       <a href="https://discord.com/users/988032182083805235" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
       <a href="https://x.com/ganl68384" target="_blank"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
       <a href="https://t.me/frankkam1214" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
