disable scrollbar display

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,8 @@ body {
   background: url("../assets/bk.webp") center no-repeat fixed;
   background-size: cover;
   font-family: "Ubuntu", sans-serif; 
-  font-display: swap; 
+  font-display: swap;
+  overflow: hidden;
 }
 
 .container {
