--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,2 +1,24 @@
 <!doctype html>
 <html lang="zh-Hant-TW">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/webp" sizes="32x32" href="/favicon.webp" />
+  <link rel="icon" type="image/webp" sizes="16x16" href="/favicon.webp" />
+  <title>Frank</title>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <script is:inline src="https://unpkg.com/lenis@1.3.1/dist/lenis.min.js"></script>
+        <script is:inline>
+        const lenis = new Lenis()
+        function raf(time) {
+            lenis.raf(time)
+            requestAnimationFrame(raf)
+        }
+        requestAnimationFrame(raf)
+        
+  </script>
+</head>
