--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,21 @@
             requestAnimationFrame(raf)
         }
         requestAnimationFrame(raf)
-        
   </script>
+<script src="https://giscus.app/client.js"
+        data-repo="Frank-Kam/links"
+        data-repo-id="R_kgDONzPaJg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDONzPaJs4CqBI7"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="0"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-TW"
+        crossorigin="anonymous"
+        async>
+</script>
+
 </head>
