--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/index.css";
 import Layout from "../layouts/Layout.astro";
+import Comment from "../layouts/CommentLayout.astro"
 ---
 
 <Layout>
@@ -33,10 +34,8 @@ import Layout from "../layouts/Layout.astro";
       <a href="https://status.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-signal"></i>Status</a>
       <a href="https://ic3dt3a.org/" target="_blank"><i class="fa-solid fa-hat-cowboy"></i>ICDETEA CTF</a>
     </div>
-
-    <hr/>
-
-
+      <hr/>
+      <Comment/>
   </div>
 </body>
 </html>
