--- a/src/layouts/CommentLayout.astro
+++ b/src/layouts/CommentLayout.astro
@@ -10,7 +10,7 @@
         data-emit-metadata="0"
         data-input-position="top"
         data-theme="light_protanopia"        
-        data-lang="zh-TW"
+        data-lang="en"
         crossorigin="anonymous"
         async>
 </script>
