--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,9 @@
+
 body {
   background: url("../assets/bk.webp") center no-repeat fixed;
   background-size: cover;
-  font-family: "Ubuntu", sans-serif; 
-  font-display: swap;
-}
-
-body::-webkit-scrollbar {
-  display: none;
-}
-
-html {
-  scrollbar-width: none;
+  font-family: "Ubuntu", serif;
+  font-style: normal;
 }
 
 .container {
@@ -21,32 +14,29 @@ html {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  will-change: transform; 
 }
 
 h1 {
+  align-items: center;
   color: black;
   font-size: 2.8rem;
   margin-bottom: 10px;
-  font-display: swap;
 }
 
 h2 {
   color: black;
   font-size: 1.5rem;
   margin-bottom: 15px;
-  font-display: swap;
 }
 
 hr {
-  border: none;
+  border: 0;
   height: 1px;
-  background: linear-gradient(
-      to right,
-      transparent 0%,
-      rgba(255, 255, 255, 1) 20%,
-      rgba(255, 255, 255, 1) 80%,
-      transparent 100%
+  background: linear-gradient(to right, 
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 20%,
+    rgba(255, 255, 255, 1) 80%,
+    rgba(255, 255, 255, 0) 100%
   );
   margin: 30px auto;
   width: 80%;
@@ -61,7 +51,8 @@ hr {
   width: 100%;
 }
 
-.links a {
+.links a, 
+.spotify-embeds iframe{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,14 +61,13 @@ hr {
   color: black;
   text-decoration: none;
   border-radius: 9.3px;
-  transition: all 0.3s ease;
+  transition: 0.3s;
   width: 100%;
   max-width: 500px;
   font-size: 1.2em;
   font-weight: bold;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   vertical-align: middle;
-  will-change: transform, box-shadow;
 }
 
 .links a:hover {
@@ -86,31 +76,52 @@ hr {
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
 }
 
-.links a i,
-.links b i {
+.links a i, .links b i {
   font-size: 1.5em;
   margin-right: 33px;
   line-height: 0;
   vertical-align: middle;
 }
 
+.spotify-embeds {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  width: 100%;
+}
+
+.spotify-embeds iframe {
+  border-radius: 12px;
+  width: 100%;
+  max-width: 500px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.spotify-embeds iframe:hover {
+  transform: scale(1.03);
+}
+
+
 @media (max-width: 560px) {
   .container {
-      width: 83%;
-      margin: 20px auto;
-      padding: 15px;
+    width: 83%;
+    margin: 20px auto;
+    padding: 15px;
   }
 
   h1 {
-      font-size: 1.8rem;
+    font-size: 1.8rem;
   }
 
   h2 {
-      font-size: 1.3rem;
+    font-size: 1.3rem;
   }
 
-  .links a {
-      width: 100%;
-      font-size: 1.1em;
+  .links a,
+  .spotify-embeds iframe {
+    width: 100%;
+    font-size: 1.1em;
   }
 }
