--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@ body {
 body::-webkit-scrollbar {
 
 
-  display: none;                 /* Chrome, Safari 和新版 Edge */
+  display: none;
 
 
 }
@@ -21,7 +21,7 @@ html {
 
 .container {
   max-width: 900px;
-  background: rgba(255, 255, 255, 0.23);
+  background: rgba(255, 255, 255, 0.16);
   padding: 20px;
   margin: 50px auto;
   border-radius: 10px;
@@ -70,7 +70,7 @@ hr {
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background: rgba(255, 255, 255, 0.493);
+  background: rgba(255, 255, 255, 0.3);
   color: black;
   text-decoration: none;
   border-radius: 9.3px;
