--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import { Image } from 'astro:assets';
       <a href="https://discord.com/users/988032182083805235" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
       <a href="https://x.com/ganl68384" target="_blank"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
       <a href="https://t.me/frankkam1214" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
-      <a href="mailto:ganl68384@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i>Email</a>
+      <a href="mailto:mail@frankk.uk" target="_blank"><i class="fa-regular fa-envelope"></i>Email</a>
       <a href="https://blog.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-rss"></i>Blog</a>
       <a href="https://github.com/Frank-Kam" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
     </div>
