--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,9 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
 @font-face {
   font-family: 'Ubuntu';
-  src: url('/Ubuntu-Bold.ttf') format('truetype');
+  src: url('Ubuntu_Bold.woff2') format('woff2');  
   font-weight: 700;
-  font-style: normal;
+  font-style: swap;
 }
 body {
   background: url("../assets/bk.webp") center center / cover no-repeat fixed;
