--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
   font-family: 'Ubuntu';
   src: url('Ubuntu_Bold.woff2') format('woff2');  
   font-weight: 700;
-  font-style: swap;
+  font-style: normal;
 }
 body {
   background: url("../assets/bk.webp") center center / cover no-repeat fixed;
