--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,7 @@
 @import '@fortawesome/fontawesome-free/css/all.css';
 @font-face {
   font-family: 'Ubuntu';
-  src: url('Ubuntu_Bold.woff2') format('woff2');  
+  src: url('font.woff2') format('woff2');  
   font-weight: 700;
   font-style: normal;
 }
