chore(pnpm): update dependencies

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/index.css";
 import Layout from "../layouts/Layout.astro";
-import avatar from '../images/avatar.webp'; // 確保這個檔案存在於該位置
+import avatar from '../images/avatar.webp';
 import { Image } from 'astro:assets';
 ---
 
@@ -21,7 +21,7 @@ import { Image } from 'astro:assets';
       <a href="https://g0v.social/@frk_tw" target="_blank"><i class="fa-brands fa-mastodon"></i>Mastodon</a>
       <a href="https://discord.com/users/988032182083805235" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
       <a href="https://x.com/ganl68384" target="_blank"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
-      <a href="https://t.me/frankkam1214" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
+      <a href="https://t.me/frk_tw" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
       <a href="mailto:mail@frankk.uk" target="_blank"><i class="fa-regular fa-envelope"></i>Email</a>
       <a href="https://blog.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-rss"></i>Blog</a>
       <a href="https://github.com/Frank-Kam" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
