chore(pnpm): update dependencies; and add tool box link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,7 @@ import { Image } from 'astro:assets';
       <a href="https://github.com/Frank-Kam.gpg" target="_blank"><i class="fa-solid fa-key"></i>GnuPG Public Key</a>
       <a href="https://ctf.dypc.cc/" target="_blank"><i class="fa-solid fa-school"></i>My School Club</a>
       <a href="https://status.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-signal"></i>Status</a>
+      <a href="https://tool.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-toolbox"></i>Tool Box</a>
       <a href="https://ic3dt3a.org/" target="_blank"><i class="fa-solid fa-hat-cowboy"></i>ICDETEA CTF</a>
     </div>
     <hr/>
