--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,16 +23,15 @@ import { Image } from 'astro:assets';
       <a href="https://x.com/ganl68384" target="_blank"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
       <a href="https://t.me/frk_tw" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
       <a href="mailto:mail@frankk.uk" target="_blank"><i class="fa-regular fa-envelope"></i>Email</a>
-      <a href="https://blog.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-rss"></i>Blog</a>
+      <a href="https://blog.frk.tw/?utm_source=linkt" target="_blank"><i class="fa-solid fa-rss"></i>Blog</a>
       <a href="https://github.com/Frank-Kam" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
     </div>
 
     <div class="links">
       <h2>Others <i class="fa-solid fa-link"></i> :</h2>
       <a href="https://github.com/Frank-Kam.gpg" target="_blank"><i class="fa-solid fa-key"></i>GnuPG Public Key</a>
-      <a href="https://ctf.dypc.cc/" target="_blank"><i class="fa-solid fa-school"></i>My School Club</a>
-      <a href="https://status.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-signal"></i>Status</a>
-      <a href="https://tool.frankk.uk/?utm_source=linkt" target="_blank"><i class="fa-solid fa-toolbox"></i>Tool Box</a>
+      <!-- <a href="https://ctf.dypc.cc/" target="_blank"><i class="fa-solid fa-school"></i>My School Club</a> -->
+      <a href="https://tool.frk.tw/?utm_source=linkt" target="_blank"><i class="fa-solid fa-toolbox"></i>Tool Box</a>
       <a href="https://ic3dt3a.org/" target="_blank"><i class="fa-solid fa-hat-cowboy"></i>ICDETEA CTF</a>
     </div>
     <hr/>
