add blog section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,12 @@ import { Image } from 'astro:assets';
     </div>
     <p class="intro">Linux Lover & CTF Player & Junior Full-Stack Dev</br>High School Student from Taiwan</p>
     <hr/>
-
+    
+    <div class="links">
+      <h2>Blog <i class="fa-solid fa-rss"></i> :</h2>
+      <a href="https://blog.frk.tw/?utm_source=linkt" target="_blank"><i class="fa-solid fa-rss"></i>Blog</a>
+    </div>
+    
     <div class="links">
       <h2>Social <i class="fa-solid fa-link"></i> :</h2>
       <a href="https://instagram.com/frk.tw" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
