chore(link): remove x link and add wakatime

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,6 @@ import { Image } from 'astro:assets';
       <a href="https://www.threads.net/@frk.tw" target="_blank"><i class="fa-brands fa-threads"></i>Threads</a>
       <a href="https://g0v.social/@frk_tw" target="_blank"><i class="fa-brands fa-mastodon"></i>Mastodon</a>
       <a href="https://discord.com/users/988032182083805235" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
-      <a href="https://x.com/ganl68384" target="_blank"><i class="fa-brands fa-x-twitter"></i>Twitter</a>
       <a href="https://t.me/frk_tw" target="_blank"><i class="fa-brands fa-telegram"></i>Telegram</a>
       <a href="mailto:mail@frk.tw" target="_blank"><i class="fa-regular fa-envelope"></i>Email</a>
       <a href="https://github.com/Frank-Kam" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
@@ -34,7 +33,7 @@ import { Image } from 'astro:assets';
     <div class="links">
       <h2>Others <i class="fa-solid fa-link"></i> :</h2>
       <a href="https://github.com/Frank-Kam.gpg" target="_blank"><i class="fa-solid fa-key"></i>GnuPG Public Key</a>
-      <!-- <a href="https://ctf.dypc.cc/" target="_blank"><i class="fa-solid fa-school"></i>My School Club</a> -->
+      <a href="https://wakatime.com/@frk_tw" target="_blank"><i class="fa-solid fa-clock"></i>WakaTime</a>
       <a href="https://tool.frk.tw/?utm_source=linkt" target="_blank"><i class="fa-solid fa-toolbox"></i>Tool Box</a>
       <a href="https://ic3dt3a.org/" target="_blank"><i class="fa-solid fa-hat-cowboy"></i>ICDETEA CTF</a>
     </div>
